--- a/css/lab1/comp.css
+++ b/css/lab1/comp.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../assets/img/walldrop2.jpg');
+    background-image: url('../../assets/img//lab1/walldrop2.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -13,7 +13,7 @@ body {
     border-style: ridge;
     border-color: lightgray;
     padding-top: 20px;
-    background-image: url('../assets/img/walldrop.jpg');
+    background-image: url('../../assets/img/lab1/walldrop.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
