--- a/css/lab1/quiz.css
+++ b/css/lab1/quiz.css
@@ -9,6 +9,16 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100%;
+}
+
+.questions {
+    border: 1px ridge gray;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    box-shadow: 3px 3px 30px lightpink;
 }
 
 .button {
