--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -49,7 +49,9 @@ body {
     flex-direction: row;
 }
 
-.col {
+@media only screen and (max-width: 701px)
+{
+    .col {
     /* width: 35px;
     height: 35px; */
 
@@ -57,7 +59,20 @@ body {
     margin: 3px;
     box-shadow: 1px 1px 10px 2px pink;
     border-radius: 5px;
+    }
 }
+
+@media only screen and (min-width: 700px)
+{
+    .col {
+    width: 80px;
+    height: 80px;
+    margin: 3px;
+    box-shadow: 1px 1px 10px 2px pink;
+    border-radius: 5px;
+    }
+}
+
 
 .block {
     -webkit-transition: all 0.5s ease-in-out;
