FIX: centered text in RESTART button

--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -140,6 +140,7 @@ input {
     width: 300px;
     font-size: 70px;
     border-radius: 20px;
+    text-align: center;
 }
 
 .scoring-label, #score {
