--- a/css/lab2/dynaQuiz.css
+++ b/css/lab2/dynaQuiz.css
@@ -5,11 +5,17 @@ body {
     background-size: cover;
 }
 
-.container {
+#container {
     display: flex;
     flex-direction: column;
     align-items: center;
     min-height: 100%;
+}
+
+#title {
+    font-size: 35px;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
 
 .questions {
@@ -19,26 +25,12 @@ body {
     padding-left: 10px;
     padding-bottom: 10px;
     box-shadow: 3px 3px 30px lightpink;
+    width: 500px;
+    height: auto;
 }
 
 .button {
     width: 125px;
     margin-top: 30px;
-}
-
-.blue {
-    color: lightseagreen;
-}
-
-.red {
-    color: palevioletred;
-}
-
-.purple {
-    color: purple;
-}
-
-.green {
-    color: green;
 }
 
