--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -3,6 +3,9 @@ body {
     min-height: 100%;
     height: 100%;
     overflow: auto hidden;
+    background-image: url('../assets/img/silentgirl.jpg');
+    background-repeat: no-repeat;
+    filter: opacity(70%);
 }
 
 #container {
