--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -3,9 +3,13 @@ body {
     min-height: 100%;
     height: 100%;
     overflow: auto hidden;
-    background-image: url('../assets/img/silentgirl.jpg');
-    background-repeat: no-repeat;
-    filter: opacity(70%);
+    /* background-image: url('../assets/img/silentgirl.jpg'); */
+    background: url("../assets/img/silentgirl.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    filter: opacity(85%);
 }
 
 #container {
