--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -172,6 +172,7 @@ input {
 
 #score-container {
     display: flex;
+    flex-direction: row;
     justify-content: center;
 
     background-Color: grey;
