--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -100,7 +100,7 @@ body {
     
     width: 100px;
     height: 120px;
-    z-index: 5;
+    z-index: 1;
     background-color: white;
     filter: opacity(70%);
 }
@@ -168,15 +168,18 @@ input {
 .score-child {
     width: 100px;
     height: 50px;
+    color: white;
+}
+
+.response-child {
+    display: flex;
+    flex-direction: row;
 }
 
 #score-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-
     background-Color: grey;
     filter: opacity(70%);
+    z-index: 6;
 }
 
   
