--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -177,6 +177,8 @@ input {
 }
 
 #score-container {
+    display: flex;
+    justify-content: center;
     background-Color: grey;
     filter: opacity(70%);
     z-index: 6;
