--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -178,6 +178,7 @@ input {
 
 #leaderboard-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     background-Color: white;
     filter: opacity(70%);
