--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -173,6 +173,8 @@ input {
 
 .response-child {
     display: flex;
+    justify-content: center;
+    align-content: center;
     flex-direction: row;
 }
 
