--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -169,6 +169,8 @@ input {
     width: 100px;
     height: 50px;
     color: black;
+    font-size: 52px;
+    font-weight: bold;
 }
 
 .response-child {
