--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -176,7 +176,7 @@ input {
 
 .response-child {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     flex-direction: row;
 }
 
