--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -171,12 +171,12 @@ input {
     color: black;
     font-size: 46px;
     font-weight: bold;
-    padding-left: 15px;
+    padding-left: 35px;
 }
 
 .response-child {
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     flex-direction: row;
 }
 
