--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -190,4 +190,10 @@ input {
     z-index: 6;
 }
 
+body > #restart {
+    display: flex;
+    justify-self: center;
+    align-self: center;
+}
+
   
