--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -190,10 +190,10 @@ input {
     z-index: 6;
 }
 
-body > #restart {
+#l-container {
     display: flex;
-    justify-self: center;
-    align-self: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
   
