--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -192,6 +192,7 @@ input {
 
 #l-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-content: center;
 }
