--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -172,7 +172,7 @@ input {
     color: black;
     font-size: 46px;
     font-weight: bold;
-    padding-left: 35px;
+    padding-left: 100px;
 }
 
 .response-child {
@@ -193,8 +193,8 @@ input {
 #l-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
+    min-height: 98%;
+    align-items: center;
 }
 
   
