minor change to css

--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -182,7 +182,7 @@ input {
     flex-direction: row;
 }
 
-#leaderboard-container {
+#leaderboard-container, #userContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
