--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -191,6 +191,12 @@ input {
     z-index: 6;
 }
 
+#user-container {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+}
+
 #l-container {
     display: flex;
     flex-direction: column;
