please do most of the thongs

--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -166,11 +166,20 @@ input {
     font-weight: bold;
 }
 
-.score-child, .user-only {
+.score-child {
     width: 100px;
     height: 80px;
     color: black;
     font-size: 36px;
+    font-weight: bold;
+    padding-left: 80px;
+}
+
+.user-child {
+    width: 100px;
+    height: 80px;
+    color: black;
+    font-size: 24px;
     font-weight: bold;
     padding-left: 80px;
 }
