add user-only width

--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -209,6 +209,10 @@ input {
     z-index: 6;
 }
 
+.user-only {
+    width: 400px;
+}
+
 #user-container {
     display: flex;
     flex-direction: row;
