--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -201,17 +201,16 @@ input {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    justify-items: center;
-    align-items: center;
     align-content: center;
+    justify-self: center;
+    align-self: center;
+    
+    width: 400px;
     background-Color: white;
     filter: opacity(70%);
     z-index: 6;
 }
 
-.user-only {
-    width: 400px;
-}
 
 #user-container {
     display: flex;
