--- a/COMP4537/IndividualAssignment/MemoryGame/css/index.css
+++ b/COMP4537/IndividualAssignment/MemoryGame/css/index.css
@@ -197,7 +197,7 @@ input {
     font-weight: bold;
 }
 
-#leaderboard-container {
+#leaderboard-container, .user-only {
     display: flex;
     flex-direction: column;
     justify-content: center;
