--- a/css/lab5/dictionary.css
+++ b/css/lab5/dictionary.css
@@ -7,6 +7,7 @@ body{
 
 #container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-image: url('../../assets/img/lab5/dictionaryIMG.jpg');
@@ -47,4 +48,6 @@ body{
 button {
     width: 100px;
     height: 35px;
+    margin-top:10px;
+    border-radius: 8px;
 }
