--- a/css/lab5/search.css
+++ b/css/lab5/search.css
@@ -7,6 +7,7 @@ body{
 
 #container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-image: url('../../assets/img/lab5/search.jpg');
@@ -76,11 +77,16 @@ body{
     height: 32px;
     margin-left: 2px;
  }
- 
- button {
+
+ button, #submit {
     width: 100px;
     height: 35px;
+    margin-top: 10px;
+    border-radius: 8px;
+
 }
+
+
 
 
 
