--- a/css/lab5/dictionary.css
+++ b/css/lab5/dictionary.css
@@ -17,6 +17,10 @@ body{
 }
 
 #inner-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     background: rgba(255, 255, 255, 0.75);
     border-radius: 8px;
     width: max-content;
