--- a/css/lab5/search.css
+++ b/css/lab5/search.css
@@ -94,7 +94,7 @@ body{
     justify-content: start;
 }
 
-#term #definition {
+#term, #definition {
     color: white;
     margin-left: 10px;
     margin-right: 10px;
