--- a/css/lab5/search.css
+++ b/css/lab5/search.css
@@ -101,6 +101,10 @@ body{
 }
 
 #term {
-    font-size: 18px;
+    font-size: 24px;
     font-weight: bold;
+}
+
+#definition {
+    font-size: 18px;;
 }
