--- a/COMP4537/termProject/pokeAPI/css/documentation.css
+++ b/COMP4537/termProject/pokeAPI/css/documentation.css
@@ -2,6 +2,7 @@
 .container{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 #title {
@@ -66,6 +67,10 @@ span:hover {
 table, tr, th {
     border: 1px solid #ddd;
     padding: 8px;
+}
+
+table, pre {
+    width: 90%;
 }
 
 th{
