--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -585,3 +585,11 @@ a.icon-up-bg:hover {color: #212121;}
     font-size: 20px;
     font-weight: bolder;
 }
+
+.contact-me {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-weight: bolder;
+
+}
