adjusted blue color of skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9699,7 +9699,7 @@ textarea.form-control {
 }
 
 .skill-item:hover {
-  background-color: blue;
+  background-color: #3E64FF;
   color: white !important;
 }
 
