--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9001,10 +9001,11 @@ h1, h2, h3, h4, h5,
         opacity: 1; }
         .project .text span {
           color: rgba(255, 255, 255, 0.8); } 
-      /* .text {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center }  */}
+    @media (max-width: 480px) {
+      .text {
+        font-size: 1rem;
+      }
+    }
         
   .project:hover .overlay, .project:focus .overlay {
     opacity: .9; }
