--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9003,7 +9003,7 @@ h1, h2, h3, h4, h5,
           color: rgba(255, 255, 255, 0.8); } 
     @media (max-width: 480px) {
       .text {
-        font-size: 1rem;
+        font-size: 18px;
       }
     }
         
