--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9003,8 +9003,7 @@ h1, h2, h3, h4, h5,
           color: rgba(255, 255, 255, 0.8); } }
     @media (max-width: 480px) {
       .text {
-        font-size: 18px;
-      }
+        font-size: 18px; }
     }
         
   .project:hover .overlay, .project:focus .overlay {
@@ -9716,6 +9715,9 @@ textarea.form-control {
   color: white
 }
 
+.overflow {
+  overflow: auto
+}
 /* @media(hover: hover) and (pointer: focus)
 {
   .project:hover .overlay, .project:focus .overlay {
